--- a/template-items.html
+++ b/template-items.html
@@ -51,6 +51,7 @@
     &totalVar=`total`
     &includeTVs=`myimage,priceCurrent`
     &tvPrefix=``
+    &where=`{"id:!=":"5"}`
 ]]
 
 <nav aria-label="Page navigation">
